# itmo

./: .gitignore  .gitignore.save  .gitmodules  CV.docx  README.md  resume.docx
cardsmobile/: Анкета Бесконтакт.docx  Заявление о гос. службе.docx
helps/: cpp.md  ios.md  java.md
sem--5/eng/: HW-1A-Rassadnikov.docx  HW-3A-Rassadnikov.docx  HW-3B-Rassadnikov.docx  WR-5-Rassadnikov.docx
sem--5/mathStat/: M33351 Рассадников Григорий.xlsx
sem-1/dc/: 01-create-database.sql  02-create-table-user.sql  03-insert-into-user.sql  04-create-table-post.sql  05-insert-into-post.sql  06-create-table-role.sql  07-insert-into-role.sql  08-create-table-userrole.sql  09-insert-into-userrole.sql
sem-2/asd/: 1A.cpp  1B.cpp  1CC.cpp  1D.cpp  1E.cpp  2A.cpp  4A.cpp  4B.cpp  5A.cpp  5B.cpp  5C.cpp
sem-2/dm/: A.cpp  A_2.cpp  B.cpp  B_2.cpp  C.cpp  F.cpp  H.cpp  dm.py  dm_70.py  dm_72.py  dm_80.py  dm_81.py  dm_82.py  dm_89.py
sem-2/eng/: text_1_Rassadnikov_Grigorii.txt  text_2_Rassadnikov_Grigorii.txt  text_9_Rassadnikov_Grigorii.txt
sem-2/linal/: LinalHelpCount.py
sem-3/asd/: 1A.cpp  2A.cpp  5A.cpp  A.cpp  B.cpp  CMakeLists.txt
sem-3/bsd/: LAB_Исследование_сна.docx  LAB_Осознанное_потребление.docx  LAB_Путешествия.docx  LAB_Расчет_меню.docx  LAB_Финансовые_операции.docx  LAB_Формирование_бюджета.docx  LAB_ЧС.docx
sem-3/dm/: statRandomGraph.xlsx
sem-3/dm/lab-1/: A.cpp  B.cpp  C.cpp  CMakeLists.txt  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp
sem-3/eng/: C-U6-06.12-Rassadnikov.docx  HW(A1B1)-U1-Rassadnikov.docx  W-U1-Rassadnikov.docx  W-U2-Rassadnikov.docx  (+4 more)
sem-6/: FL-deb-team.docx
(+875 files in other folders)
