cmake_minimum_required(VERSION 3.23)
project(lab_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab_1 main.cpp)
add_executable(A A.cpp )
add_executable(B B.cpp)
add_executable(C C.cpp)
add_executable(D D.cpp)
add_executable(E E.cpp)
add_executable(F F.cpp)
add_executable(G G.cpp)
add_executable(H H.cpp)
